# real-kanban

.claude/skills/rk-kanban/: SKILL.md
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  schema.sql
backend/src/: db.rs  lib.rs  main.rs  middleware.rs
backend/src/handlers/: columns.rs  linked_paths.rs  mod.rs  projects.rs  subtasks.rs  tags.rs  tasks.rs  tasks.rs.bak  tasks.rs.bak2
backend/tests/: api_tests.rs
cli/: Cargo.toml  README.md  update.sh
cli/src/: api.rs  config.rs  main.rs
data/: kanban.db  kanban.db-shm
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  Sidebar.tsx  TaskDetailModal.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/components/board/: Board.tsx  Column.tsx  TaskCard.tsx
frontend/src/components/ui/: card.tsx  linkify-text.tsx
frontend/src/hooks/mutations/: useColumns.ts  useCreateTask.ts  useMoveTask.ts
frontend/src/hooks/queries/: queryKeys.test.ts  queryKeys.ts  useProject.ts  useProjects.ts  useTasks.ts
frontend/src/lib/: api.ts  queryClient.ts  utils.test.ts
frontend/src/pages/: ProjectBoardPage.tsx  ProjectListPage.tsx
