[package]
name = "real-kanban"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
dirs = "5"
anyhow = "1"
hostname = "0.4"
urlencoding = "2"
